fixed the ui bugs as well as enhanced the bulk question upload system and others.